2002-10-28  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/tm_basic.cxx: Include infra/diag.h and removed the 
	incorrect prototype for diag_printf

2002-10-16  Gary Thomas  <gthomas@ecoscentric.com>

	* include/test/stackmon.h (STACKMON_PRINTF): Use #include to get
	prototype for 'diag_printf()'.

2002-10-01  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/common/clock.cxx (add_alarm): Tweak last change to allow
	alarm order for identical alarms to be the same as it used to be.

2002-09-30  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/common/clock.cxx (add_alarm): Fix bug resulting in alarms
	not being added at all if a lower triggered alarm already exists.
	Reported by Christoph Csebits.
	Also fix bug when alarm is entered for the same time as tail.
	These bugs only apply for CYGIMP_KERNEL_COUNTERS_SORT_LIST enabled.

	* doc/kernel.sgml: document that order of callback for alarms at
	identical times is unspecified.

2002-08-08  Nick Garnett  <nickg@calivar.demon.co.uk>

	* src/sched/sched.cxx (unlock_inner): Removed initial
	assertion. This has served its purpose and with the introduction
	of routines such as unlock_reschedule() is prone to firing in
	otherwise benign circumstances.

2002-08-05  Bart Veer  <bartv@tymora.demon.co.uk>

	* cdl/kernel.cdl, include/kapidata.h, include/kapi.h:
	Allow configurations with the kernel but no malloc

2002-06-05  Gary Thomas  <gary@chez-thomas.org>

	* include/kapi.h: Fix prototype (to allow builds with net stack).

2002-05-24  Jesper Skov  <jskov@redhat.com>

	* cdl/kernel.cdl: Fix typo.

2002-05-23  Jonathan Larmour  <jlarmour@redhat.com>

	* include/kapi.h: Expose new cyg_thread_add_destructor and
	cyg_thread_rem_destructor APIs.

	* include/kapidata.h (struct Cyg_Destructor_Entry):
	Change CYG_ADDRWORD to more correct cyg_addrword_t.

	* include/thread.hxx (class Cyg_Thread): add_destructor and
	rem_destructor are onyl static when not per-thread.

	* include/thread.inl (add_destructor): Don't need to lock and unlock